# dbt-llm-sl-bench

./: .env.example  .gitignore  ACME_enhanced.ddl  ARCHITECTURE.md  LICENSE  README.md  TODO.md  benchmark_questions.ttl  index.html  llm_bench_dashboard.db  manifest.webmanifest  pyproject.toml  pytest.ini  run_bench.py
.github/workflows/: codeowners-check.yml
_app/: version.json
_app/immutable/assets/: 0.B_xyijko.css  0.CSnzuA7h.css  _layout.BZovH3W_.css  _layout.CcbgK0_R.css
_app/immutable/chunks/: AccordionItem.BnqZy0o2.js  AccordionItem.C9Db_PaP.js  AccordionItem.Dv-86r1T.js  AccordionItem.ZMocjLp-.js  BarChart.BoqY4fgG.js  BarChart.Cv3iJ0me.js  BarChart.DE0mv94A.js  BarChart.DvmKmLnr.js  Button.BSKFt3wa.js  Button.COfXuFNh.js  Button.D6N0bnb2.js  Button.DyU8m5IE.js  Dropdown.BETeQejS.js  Dropdown.Dh3gxL7t.js  Dropdown.loLMN9f6.js  Dropdown.uDDRpxsW.js  QueryViewer.8ZqyNL9l.js  QueryViewer.BK5YDewa.js  QueryViewer.C4_HBw7a.js  QueryViewer.DSnNt3d6.js  VennDiagram.svelte_svelte_type_style_lang.C63weWHt.js  VennDiagram.svelte_svelte_type_style_lang.D3ezODmO.js  VennDiagram.svelte_svelte_type_style_lang.DjmsfNde.js  VennDiagram.svelte_svelte_type_style_lang.V3IrnYH-.js  button.BoWhvNYd.js  button.ibumO6Vl.js  button.mvqOUa-x.js  button.wPWzZH-p.js  duckdb-browser-eh.worker.BHT5HUKb.js  duckdb-browser-mvp.worker.DZmNLLb8.js  duckdb-eh.vv3uaUpY.js  duckdb-mvp.c4fGM-XZ.js  entry.BaYMNKmK.js  entry.DKu5FThD.js  entry.DXWdsfI4.js  entry.ajQ9tCyF.js  index.BwoQS8MT.js  preload-helper.Ckm_FTCp.js  prism-svelte.Bvu4zXWd.js  prism-svelte.C46YQP7c.js  (+11 more)
_app/immutable/entry/: app.B2QmwxU7.js  app.DLHHF77S.js  app.OgAF4Gt_.js  app.WIVgQeD_.js  start.-0rIkVjd.js  start.BqmXxiin.js  start.Ccp3jyq1.js  start.Ck1yXZQX.js
_app/immutable/nodes/: 0.7cHXDk-r.js  0.BQEZoJ3E.js  0.CCV7j013.js  0.DiEOr9TT.js  1.17ZOL_E8.js  1.BHEe6P4R.js  1.CEPYv8ou.js  1.DKXnBTkA.js  10.C7Zi-x_4.js  10.CN2B1K-r.js  10.tUwxk2kc.js  10.vh3KXljx.js  2.ChWGyyWJ.js  3.DKeqy5q6.js  4.DaXpfj0F.js  4.DffOu_kD.js  4.N88wjuYV.js  4.NRtn7jrA.js  5.0f1qlM-A.js  5.BOMnWyh-.js  5.BsSxP9Xc.js  5.DjbtwMfL.js  6.BztBDBzT.js  6.CG2lsDJN.js  6.DG4lujSo.js  6.TxCbdbve.js  7.D0y7LrPg.js  7.D2To6SZh.js  7.D4xYJNE-.js  7.cBlZjsyK.js  8.DhsGfnjX.js  8.DplMj5hS.js  8.DsK2h6G8.js  8.DuZdckbM.js  9.BEwAF5pf.js  9.C3EDZAka.js  9.Ch5_n5pC.js  9._Xl3eY0q.js
api/: evidencemeta.json  pagesManifest.json
api/5b1d40a451e6b26d88f727cca1e63f2d/d41d8cd98f00b204e9800998ecf8427e/: all-queries.json
api/6666cd76f96956469e7be39d750cc7d9/d41d8cd98f00b204e9800998ecf8427e/: all-queries.json
api/bce48180c1771c011270e21088b8448b/d41d8cd98f00b204e9800998ecf8427e/: all-queries.json
api/cd37c5116e17826f22ab5cfd2948bfd1/d41d8cd98f00b204e9800998ecf8427e/: all-queries.json
api/compare/: evidencemeta.json
api/historical/: evidencemeta.json
api/repeated-runs/: evidencemeta.json
compare/: index.html
data/: manifest.json
data/llm_bench/batch_config/: batch_config.schema.json
data/llm_bench/sql_answers/: sql_answers.schema.json
historical/: index.html
repeated-runs/: index.html
results_analysis/: .gitignore  .npmrc  README.md  evidence.config.yaml  package-lock.json  package.json  pnpm-lock.yaml
results_analysis/components/: DefaultValue.svelte
results_analysis/pages/: +layout.svelte  compare.md  cost.md  historical.md  index.md  mcp_server.md  models.md  oct29_comparison.md  questions.md  repeated-runs.md  timing.md  token.md
results_analysis/sources/llm_bench/: batch_config.sql  connection.yaml  sql_answers.sql
src/: __init__.py
src/llm_bench/: __init__.py  pricing.py
src/llm_bench/config/: __init__.py  base.py  manager.py  settings.py  strategies.py  validation.py
src/llm_bench/exceptions/: __init__.py  errors.py
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_challenge_loader.py  test_comparison.py  test_config.py  test_factories.py  test_models.py  test_pricing.py  test_storage.py  test_validation.py  test_visualization.py
(+25 files in other folders)
