[project]
name = "llm-bench-notebook"
version = "0.1.0"
description = "LLM Benchmark Tool - A modular benchmarking framework for testing LLM query generation"
readme = "README_REFACTORED.md"
requires-python = ">=3.13"
dependencies = [
    "adbc-driver-flightsql>=1.7.0",
    "anyio>=4.6,<4.9",
    "duckdb>=1.3.2",
    "ipykernel>=6.30.1",
    "loguru>=0.7.0",
    "matplotlib>=3.10.6",
    "nest-asyncio>=1.6.0",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "pydantic-ai>=0.8.1",
    "pydantic-settings>=2.0.0",
    "rdflib>=7.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
