[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbt-llm-sl-bench"
version = "0.1.0"
description = "LLM Benchmark Tool - A modular benchmarking framework for testing LLM query generation against dbt Semantic Layer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adbc-driver-flightsql>=1.7.0",
    "anyio>=4.6,<4.9",
    "duckdb>=1.3.2",
    "ipykernel>=6.30.1",
    "loguru>=0.7.0",
    "matplotlib>=3.10.6",
    "nest-asyncio>=1.6.0",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "pydantic-ai>=0.8.1",
    "pydantic-settings>=2.0.0",
    "pyparsing>=3.2.0",
    "rdflib>=7.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ty",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [
    "*.ipynb",
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "DTZ",    # flake8-datetimez
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
]

ignore = [
    "ANN401",  # Dynamically typed expressions (Any) are disallowed
    "S101",    # Use of assert detected (common in tests)
    "PLR0913", # Too many arguments to function call
    "PLR2004", # Magic value used in comparison
    "T201",    # print found (common in notebooks/debugging)
    "S603",    # subprocess call: check for execution of untrusted input
    "S607",    # Starting a process with a partial executable path
    "DTZ005",  # datetime.datetime.now() without tz argument
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Allow assert in tests
    "ARG",     # Allow unused arguments in tests (fixtures)
    "PLR2004", # Allow magic values in tests
    "PLC0415", # Allow imports inside functions in tests (lazy loading)
    "ANN001",  # Allow missing argument annotations in tests (fixtures)
]
"**/__init__.py" = [
    "F401",    # Allow unused imports in __init__.py
]
"run_bench.py" = [
    "E501",    # Line too long (experimental/notebook-style code)
]
"test_comparison_debug.py" = [
    "E501",    # Line too long (debug/experimental code)
]

[tool.ruff.lint.isort]
known-first-party = ["llm_bench"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
line-ending = "auto"
quote-style = "double"
indent-style = "space"

[tool.ty]
[tool.ty.src]
exclude = ["*.ipynb"]
# Override for pandas DataFrame columns parameter - list[str] is valid
[[tool.ty.overrides]]
include = ["src/llm_bench/**/*.py"]
[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
